--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -40,7 +40,8 @@
 
 - name: generate new grub config
   become: yes
-  shell: grub2-mkconfig -o {{ grub_cfg.stat.lnk_source }}
+#  shell: grub2-mkconfig -o {{ grub_cfg.stat.lnk_source }}
+  shell: grub2-mkconfig -o /boot/grub2/grub.cfg
 
 - name: restart xinetd
   become: yes
