--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: "Check OS version and family"
   debug:
-    msg: "PASS | This role can only be executed on Amazon Linux 2 operating systems."  
+    msg: "PASS | This role can only be executed on Amazon Linux 2 operating systems."
   when:
     - ansible_distribution|lower == 'amazon'
     - ansible_distribution_version is version_compare('2', '==')
@@ -33,16 +33,16 @@
 
 - name: "Check ansible version"
   debug:
-    msg: "PASS | The detected Ansible version is greater than 2.7"  
+    msg: "PASS | The detected Ansible version is greater than 2.7"
   when: ansible_version.full is version_compare('2.7', '>=')
   tags:
     - always
 
-- import_tasks: prelim.yml
-  become: yes
-  tags:
-    - prelim_tasks
-    - always
+#- import_tasks: prelim.yml
+#  become: yes
+#  tags:
+#    - prelim_tasks
+#    - always
 
 - import_tasks: section1.yml
   become: yes
@@ -68,8 +68,8 @@
   become: yes
   when: amazonlinux2cis_section6
 
-- import_tasks: post.yml
-  become: yes
-  tags:
-    - post_tasks
-    - always
+#- import_tasks: post.yml
+#  become: yes
+#  tags:
+#    - post_tasks
+#    - always
