--- a/vars/main.yml
+++ b/vars/main.yml
@@ -6,3 +6,29 @@
 # file, You can obtain one at https://mozilla.org/MPL/2.0/.
 ## END COPYRIGHT NOTICE ##
 # vars file for AmazonLinux2CIS
+
+block_msg:
+  - msg_path: /etc/issue.net
+    block: |
+        |-----------------------------------------------------------------|
+        |                       NUTANIX                                   |
+        | This system is for the use of authorized users only.            |
+        | Individuals using this computer system without authority, or in |
+        | excess of their authority, are subject to having all of their   |
+        | activities on this system monitored and recorded by system      |
+        | personnel.                                                      |
+        |                                                                 |
+        | In the course of monitoring individuals improperly using this   |
+        | system, or in the course of system maintenance, the activities  |
+        | of authorized users may also be monitored.                      |
+        |                                                                 |
+        | Anyone using this system expressly consents to such monitoring  |
+        | and is advised that if such monitoring reveals possible         |
+        | evidence of criminal activity, system personnel may provide the |
+        | evidence of such monitoring to law enforcement officials.       |
+        |-----------------------------------------------------------------|
+  - msg_path: /etc/motd
+    block: |
+        WARNING:  Unauthorized access to this system is forbidden and will be
+        prosecuted by law. By accessing this system, you agree that your actions
+        may be monitored if unauthorized usage is suspected.
